log/build_2024-02-23_10-23-08/motor/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor/motorpwm.py", line 16
    	pwm1.ChangeDutyCycle((int)duty)
    	                      ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

